# parking-space-reservation-chatbot

./: .env.template  .gitignore  README.md  admin.py  app.py  client.py  docker-compose.yaml  main.py  mcp-server.Dockerfile  presentation.pptx  pyproject.toml  requirements.txt
.github/workflows/: build-main.yml  build-pr.yml  pylint.yml  pytest.yml
assets/dynamic/: init_data.sql
assets/static/: parking-reservation.md
chatbot/: assistant.py  graph.py  graph_utils.py  logging.py  nodes.py  notifier.py  prompts.py  settings.py  states.py
chatbot/database/: retriever.py  sql_store.py
chatbot/graph/: client_graph.py  models.py  nodes.py  prompts.py  root_graph.py  states.py  utils.py
chatbot/guardrail/: filtering.py
chatbot/mcp/: mcp_server.py
chatbot/scripts/: ingest_static_data.py  init_checkpoiter.py  run_evaluation.py
chatbot/utils/: evaluation_utils.py  graph_utils.py  settings.py  sql_store_utils.py  weaviate_utils.py
tests/: test_guardrail_filtering.py  test_mcp_server.py  test_mcp_server_perf.py  test_nodes_admin.py  test_nodes_guardrail.py  test_nodes_reservation_client.py  test_sql_store.py
