[project]
name = "parking-space-reservation-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-weaviate>=0.0.7",
    "langgraph>=1.2.6",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "tqdm>=4.68.3",
    "weaviate>=0.1.2",
    "weaviate-client>=4.22.0",
]
