[project]
name = "parking-space-reservation-chatbot"
version = "0.1.0"
description = "Parking space reservation chatot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=7.1.4",
    "click>=8.4.2",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-weaviate>=0.0.7",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pylint>=4.0.6",
    "simsimd>=6.5.16",
    "spacy>=3.8.14",
    "tqdm>=4.68.3",
    "weaviate>=0.1.2",
    "weaviate-client>=4.22.0",
]

# pylint
[tool.pylint.main]
jobs = 4
ignore = [".venv"]

[tool.pylint.messages_control]
disable = [
    "fixme",
    "missing-docstring",
    "global-statement",
    "too-many-positional-arguments",
    "too-many-arguments",
    "broad-exception-caught",
    "broad-exception-raised"
]

[tool.pylint.design]
max-nested-blocks = 7

[tool.pylint.format]
max-line-length = 200

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

